--- a/Lab3/smp-pzpi-23-1-burkhan-inzhyla-lab3/Lab3Styles.css
+++ b/Lab3/smp-pzpi-23-1-burkhan-inzhyla-lab3/Lab3Styles.css
@@ -22,6 +22,9 @@ input[type="submit"]{
     border: solid 0.1px;
     padding: 6px 21px;
 }
+.cartBody p{
+    font-weight: 600;
+}
 
 .product {
     display: flex;
